# meal_planner

./: .env  .gitignore  App.svelte  Cargo.toml  README.md  package-lock.json  package.json  settings.json
src/: App.svelte  App.tsx  gpt_3_5_turbo.rs  main.rs  main.tsx  main2.rs  main3.rs  recipe.rs  styles.css
src-tauri/: .env  .gitignore  Cargo.toml
src-tauri/src/: gpt_3_5_turbo.rs  main.rs  meal.rs
src-tauri/src/chat/: gpt_3_5_turbo.rs
src-tauri/src/recipe/: get_recipe_call.rs  get_recipe_object.rs
src-tauri/src/routes/: meal.rs
src/assets/: sampleRecipe.ts
src/auth/: auth.rs  user.rs
src/chat/: gpt_3_5_turbo.rs  meal.rs
src/lib/: Recipe.svelte
src/pages/: Recipe.tsx
src/routes/: meal.rs  user.rs
src/utils/: recipeTypes.ts
