[package]
name = "meal_planner"
version = "0.1.0"
edition = "2021"

[dependencies]
chatgpt = "0.1.0"
chatgpt_rs = "1.2.3"
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
regex = "1.10.2"
reqwest = {version = "0.11.22", features = ["json"]} 
rocket = "0.4.11"
rocket_contrib = "0.4.11"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

